aula de algebra linear e arquivo de testes simples

--- a/Topicos/Algelin/sistemas-lineares.ipynb
+++ b/Topicos/Algelin/sistemas-lineares.ipynb
@@ -23,8 +23,20 @@
     "2.4 \\, x_{1} & - & 2 \\, x_{2} & + & x_{3} & = y_{2} \\\\\n",
     "7.8 \\, x_{1} & - & 4.1 \\, x_{2} & + & 6.4 \\, x_{3} & = y_{3} \\\\\n",
     "\\end{array}\n",
-    "$"
+    "$ ,"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "em que $x_{1}$, $x_{2}$, $x_{3}$ são as incógnitas. Note que $y_{i}$, $i = 1, 2, 3$, são funções das variáveis  $x_{1}$, $x_{2}$, $x_{3}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
