--- a/Topicos/Nocoes_programacao_Python/numpy_arrays.ipynb
+++ b/Topicos/Nocoes_programacao_Python/numpy_arrays.ipynb
@@ -2367,7 +2367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 105,
    "metadata": {
     "collapsed": true
    },
@@ -2378,7 +2378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 106,
    "metadata": {
     "collapsed": false
    },
@@ -2392,7 +2392,7 @@
        "       [ 10.,  11.,  12.]])"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2403,7 +2403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 107,
    "metadata": {
     "collapsed": true
    },
@@ -2414,7 +2414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 108,
    "metadata": {
     "collapsed": false
    },
@@ -2428,7 +2428,7 @@
        "       [ 10.  ,  11.  ,  12.  ]])"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2439,7 +2439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 109,
    "metadata": {
     "collapsed": true
    },
@@ -2450,7 +2450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 110,
    "metadata": {
     "collapsed": false
    },
@@ -2464,7 +2464,7 @@
        "       [ 10.  ,  11.  ,   5.  ]])"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2484,7 +2484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 111,
    "metadata": {
     "collapsed": false
    },
@@ -2498,7 +2498,7 @@
        "       [ 10.,  11.,  12.]])"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2509,7 +2509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 112,
    "metadata": {
     "collapsed": false
    },
@@ -2532,7 +2532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 113,
    "metadata": {
     "collapsed": false
    },
@@ -2564,7 +2564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 114,
    "metadata": {
     "collapsed": false
    },
@@ -2592,6 +2592,94 @@
     "for j in range(M):\n",
     "    for i in range(N):\n",
     "        print matriz6[i][j]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2]"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "range(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5]"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "range(1,6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4, 6, 8, 10]"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "range(2,12,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(3):\n",
+    "    print i"
    ]
   },
   {
@@ -2624,7 +2712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 115,
    "metadata": {
     "collapsed": false
    },
@@ -2635,7 +2723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 116,
    "metadata": {
     "collapsed": false
    },
@@ -2648,7 +2736,7 @@
        "       [ 7.,  8.,  9.]])"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2659,7 +2747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 117,
    "metadata": {
     "collapsed": false
    },
@@ -2670,7 +2758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 118,
    "metadata": {
     "collapsed": false
    },
@@ -2683,7 +2771,7 @@
        "       [ 1.,  1.,  1.]])"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2694,7 +2782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 119,
    "metadata": {
     "collapsed": false
    },
@@ -2707,7 +2795,7 @@
        "       [  8.,   9.,  10.]])"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2718,7 +2806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 120,
    "metadata": {
     "collapsed": false
    },
@@ -2731,7 +2819,7 @@
        "       [ 3.,  3.,  3.]])"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
