revisao da notacao

--- a/Topicos/Algelin/produto-matriz-matriz.ipynb
+++ b/Topicos/Algelin/produto-matriz-matriz.ipynb
@@ -26,21 +26,58 @@
     "        \\vdots &        & \\vdots \\\\\n",
     "        a_{N1} & \\cdots & a_{NM}\n",
     "    \\end{array}\n",
-    "    \\right] \\\\\n",
+    "    \\right]_{N \\times M} \\\\\n",
     "    & = \\left[\n",
     "    \\begin{array}{c}\n",
     "        \\mathbf{A}(1,:) \\\\\n",
     "        \\vdots \\\\\n",
     "        \\mathbf{A}(N,:)\n",
     "    \\end{array}\n",
-    "    \\right] \\\\\n",
+    "    \\right]_{N \\times M} \\\\\n",
     "    & = \\left[\n",
     "    \\begin{array}{ccc}\n",
     "        \\mathbf{A}(:,1) &\n",
     "        \\cdots &\n",
     "        \\mathbf{A}(:,M)\n",
     "    \\end{array}\n",
-    "    \\right] \\: , \\\\\n",
+    "    \\right]_{N \\times M} \\:\n",
+    "\\end{split}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "e"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\begin{split}\n",
+    "    \\mathbf{B} \n",
+    "    & = \\left[\n",
+    "    \\begin{array}{ccc}\n",
+    "        b_{11} & \\cdots & b_{1M} \\\\\n",
+    "        \\vdots &        & \\vdots \\\\\n",
+    "        b_{N1} & \\cdots & b_{NM}\n",
+    "    \\end{array}\n",
+    "    \\right]_{N \\times M} \\\\\n",
+    "    & = \\left[\n",
+    "    \\begin{array}{c}\n",
+    "        \\mathbf{B}(1,:) \\\\\n",
+    "        \\vdots \\\\\n",
+    "        \\mathbf{B}(N,:)\n",
+    "    \\end{array}\n",
+    "    \\right]_{N \\times M} \\\\\n",
+    "    & = \\left[\n",
+    "    \\begin{array}{ccc}\n",
+    "        \\mathbf{B}(:,1) &\n",
+    "        \\cdots &\n",
+    "        \\mathbf{B}(:,M)\n",
+    "    \\end{array}\n",
+    "    \\right]_{N \\times M} \\: , \\\\\n",
     "\\end{split}$$"
    ]
   },
@@ -64,8 +101,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Formulação baseada no encadeamento de três laços**\n",
-    "\n",
+    "##1) Formulação baseada no encadeamento de três laços"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "A maneira mais simples de escrever o produto $\\mathbf{C} = \\mathbf{A} \\mathbf{B}$ é dada por:"
    ]
   },
@@ -113,8 +155,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Formulação baseada no produto escalar**\n",
-    "\n",
+    "##2) Formulação baseada no produto escalar"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Esta formulação consiste em representar cada elemento $\\mathbf{C}(i,j)$, $i = 1, ..., N$, $j = 1, ..., L$, pelo produto escalar entre $\\mathbf{A}(i,:)$ e $\\mathbf{B}(:,j)$. Este produto escalar é representado pelo loop $k$."
    ]
   },
@@ -184,8 +231,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Formulação baseada na combinação linear de colunas**\n",
-    "\n",
+    "##3) Formulação baseada na combinação linear de colunas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Esta formulação consiste em representar cada coluna $\\mathbf{C}(:,j)$, $j = 1, ..., L$, pela combinação linear das colunas de $\\mathbf{A}$. Para tanto, vamos rearranjar a ordem dos loops $i$, $j$ e $k$ da \"Formulação baseada no encadeamento de três laços\", tal como mostrado abaixo:"
    ]
   },
@@ -288,8 +340,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Formulação baseada no produto direto**\n",
-    "\n",
+    "##4) Formulação baseada no produto direto"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Esta formaulação consiste em representar a matriz $\\mathbf{C}$ como uma soma de matrizes definidas pelo produto direto entre as colunas $\\mathbf{A}(:,k)$ e as linhas $\\mathbf{B}(k,:)$, $k = 1, ..., M$. Para tanto, vamos rearranjar a ordem dos loops $i$, $j$ e $k$ da \"Formulação baseada no encadeamento de três laços\", tal como mostrado abaixo:"
    ]
   },
