--- a/Topicos/Algelin/produto-matriz-vetor.ipynb
+++ b/Topicos/Algelin/produto-matriz-vetor.ipynb
@@ -26,21 +26,21 @@
     "        \\vdots &        & \\vdots \\\\\n",
     "        a_{N1} & \\cdots & a_{NM}\n",
     "    \\end{array}\n",
-    "    \\right] \\\\\n",
+    "    \\right]_{N \\times M} \\\\\n",
     "    & = \\left[\n",
     "    \\begin{array}{c}\n",
-    "        \\mathbf{r}_{1}^{\\top} \\\\\n",
+    "        \\mathbf{A}(1,:) \\\\\n",
     "        \\vdots \\\\\n",
-    "        \\mathbf{r}_{N}^{\\top}\n",
+    "        \\mathbf{A}(N,:)\n",
     "    \\end{array}\n",
-    "    \\right] \\\\\n",
+    "    \\right]_{N \\times M} \\\\\n",
     "    & = \\left[\n",
     "    \\begin{array}{ccc}\n",
-    "        \\mathbf{c}_{1} &\n",
+    "        \\mathbf{A}(:,1) &\n",
     "        \\cdots &\n",
-    "        \\mathbf{c}_{M}\n",
+    "        \\mathbf{A}(:,M)\n",
     "    \\end{array}\n",
-    "    \\right] \\: , \\\\\n",
+    "    \\right]_{N \\times M} \\: , \\\\\n",
     "\\end{split}$$"
    ]
   },
@@ -48,7 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "em que $\\mathbf{r}_{i}^{\\top}$, $i = 1, ..., N$, é o vetor $1 \\times M$ que representa a $i$-ésima linha de $\\mathbf{A}$ e $\\mathbf{c}_{j}$, $j = 1, ..., M$, é o vetor $N \\times 1$ que representa a $j$-ésima coluna de $\\mathbf{A}$."
+    "em que $\\mathbf{A}(i,:)$, $i = 1, ..., N$, é o vetor $1 \\times M$ que representa a $i$-ésima linha de $\\mathbf{A}$ e $\\mathbf{A}(:,j)$, $j = 1, ..., M$, é o vetor $N \\times 1$ que representa a $j$-ésima coluna de $\\mathbf{A}$."
    ]
   },
   {
@@ -67,7 +67,7 @@
     "\n",
     "for $i = 1:N$\n",
     "\n",
-    "$\\quad \\quad y_{i} = \\mathbf{r}_{i}^{\\top} \\mathbf{x}$\n",
+    "$\\quad \\quad y_{i} = \\mathbf{A}(i,:) \\, \\mathbf{x}$\n",
     "    \n",
     "end\n",
     "\n",
@@ -92,7 +92,7 @@
     "\n",
     "for $j = 1:M$\n",
     "\n",
-    "$\\quad \\quad \\mathbf{y} = \\mathbf{y} + x_{j} \\mathbf{c}_{j}$\n",
+    "$\\quad \\quad \\mathbf{y} = \\mathbf{y} + x_{j} \\, \\mathbf{A}(:,j)$\n",
     "    \n",
     "end\n",
     "\n",
@@ -103,7 +103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A partição por linhas mostra que o elemento $y_{i}$ do vetor $\\mathbf{y}$ é o produto escalar entre a linha $\\mathbf{r}_{i}^{\\top}$, $i, ..., N$, da matriz $\\mathbf{A}$ e o vetor $\\mathbf{x}$. Já a partição por colunas mostra que o vetor $\\mathbf{y}$ é a combinação linear das colunas $\\mathbf{c}_{j}$, $j = 1, ..., M$, de $\\mathbf{A}$. Neste caso, os elementos de $\\mathbf{x}$ são os coeficientes da combinação linear."
+    "A partição por linhas mostra que o elemento $y_{i}$ do vetor $\\mathbf{y}$ é o produto escalar entre a linha $\\mathbf{A}(i,:)$, $i, ..., N$, da matriz $\\mathbf{A}$ e o vetor $\\mathbf{x}$. Já a partição por colunas mostra que o vetor $\\mathbf{y}$ é a combinação linear das colunas $\\mathbf{A}(:,j)$, $j = 1, ..., M$, de $\\mathbf{A}$. Neste caso, os elementos de $\\mathbf{x}$ são os coeficientes da combinação linear."
    ]
   },
   {
