--- a/Topicos/Algelin/produtos-entre-vetores.ipynb
+++ b/Topicos/Algelin/produtos-entre-vetores.ipynb
@@ -96,6 +96,11 @@
     "                \\vdots \\\\\n",
     "                x_{N} \\, \\mathbf{y}^{\\top}\n",
     "                \\end{array}\n",
+    "                \\right]_{N \\times N} \\\\\n",
+    "           & = \\left[\n",
+    "                \\begin{array}{ccc}\n",
+    "                y_{1} \\, \\mathbf{x} & \\dots & y_{N} \\, \\mathbf{x}\n",
+    "                \\end{array}\n",
     "                \\right]_{N \\times N}\n",
     "\\end{split}$$"
    ]
@@ -137,21 +142,21 @@
     "        \\vdots &        & \\vdots \\\\\n",
     "        m_{N1} & \\cdots & m_{NM}\n",
     "    \\end{array}\n",
-    "    \\right] \\\\\n",
+    "    \\right]_{N \\times M} \\\\\n",
     "    & = \\left[\n",
     "    \\begin{array}{c}\n",
-    "        \\mathbf{r}_{1}^{\\top} \\\\\n",
+    "        \\mathbf{M}(1,:) \\\\\n",
     "        \\vdots \\\\\n",
-    "        \\mathbf{r}_{N}^{\\top}\n",
+    "        \\mathbf{M}(N,:)\n",
     "    \\end{array}\n",
-    "    \\right] \\\\\n",
+    "    \\right]_{N \\times M} \\\\\n",
     "    & = \\left[\n",
     "    \\begin{array}{ccc}\n",
-    "        \\mathbf{c}_{1} &\n",
+    "        \\mathbf{M}(:,1) &\n",
     "        \\cdots &\n",
-    "        \\mathbf{c}_{M}\n",
+    "        \\mathbf{M}(:,M)\n",
     "    \\end{array}\n",
-    "    \\right] \\: , \\\\\n",
+    "    \\right]_{N \\times M} \\: , \\\\\n",
     "\\end{split}$$"
    ]
   },
@@ -159,7 +164,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "em que $\\mathbf{r}_{i}^{\\top}$, $i = 1, ..., N$, é o vetor $1 \\times M$ que representa a $i$-ésima linha de $\\mathbf{M}$ e $\\mathbf{c}_{j}$, $j = 1, ..., M$, é o vetor $N \\times 1$ que representa a $j$-ésima coluna de $\\mathbf{M}$."
+    "em que $\\mathbf{M}(i,:)$, $i = 1, ..., N$, é o vetor $1 \\times M$ que representa a $i$-ésima linha de $\\mathbf{M}$ e $\\mathbf{M}(:,j)$, $j = 1, ..., M$, é o vetor $N \\times 1$ que representa a $j$-ésima coluna de $\\mathbf{M}$."
    ]
   },
   {
@@ -178,7 +183,7 @@
     "\n",
     "for $i = 1:N$\n",
     "\n",
-    "$\\quad \\quad \\mathbf{r}_{i}^{\\top} = x_{i} \\, \\mathbf{y}^{\\top}$\n",
+    "$\\quad \\quad \\mathbf{M}(i,:) = x_{i} \\, \\mathbf{y}^{\\top}$\n",
     "    \n",
     "end\n",
     "\n",
@@ -201,7 +206,7 @@
     "\n",
     "for $j = 1:M$\n",
     "\n",
-    "$\\quad \\quad \\mathbf{c}_{j} = y_{j} \\, \\mathbf{x}$\n",
+    "$\\quad \\quad \\mathbf{M}(:,j) = y_{j} \\, \\mathbf{x}$\n",
     "    \n",
     "end\n",
     "\n",
