--- a/Topicos/Algelin/sistemas-lineares.ipynb
+++ b/Topicos/Algelin/sistemas-lineares.ipynb
@@ -19,9 +19,9 @@
    "metadata": {},
    "source": [
     "$\\begin{array}{r}\n",
-    "       x_{1} & + & 5 \\, x_{2} & - & 5.3 \\, x_{3} & = y_{1} \\\\\n",
-    "2.4 \\, x_{1} & - & 2 \\, x_{2} & + & x_{3} & = y_{2} \\\\\n",
-    "7.8 \\, x_{1} & - & 4.1 \\, x_{2} & + & 6.4 \\, x_{3} & = y_{3} \\\\\n",
+    "       x_{1} & + & 5 \\, x_{2} & - & 5.3 \\, x_{3} & = & y_{1} \\\\\n",
+    "2.4 \\, x_{1} & - & 2 \\, x_{2} & + & x_{3} & = & y_{2} \\\\\n",
+    "7.8 \\, x_{1} & - & 4.1 \\, x_{2} & + & 6.4 \\, x_{3} & = & y_{3} \\\\\n",
     "\\end{array}\n",
     "$ ,"
    ]
@@ -30,202 +30,211 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "em que $x_{1}$, $x_{2}$, $x_{3}$ são as incógnitas. Note que $y_{i}$, $i = 1, 2, 3$, são funções das variáveis  $x_{1}$, $x_{2}$, $x_{3}$."
+    "em que $x_{1}$, $x_{2}$, $x_{3}$ são as incógnitas. Note que $y_{i}$, $i = 1, 2, 3$, são [combinações lineares](http://mathworld.wolfram.com/LinearCombination.html) das variáveis  $x_{1}$, $x_{2}$, $x_{3}$. Isso significa que a derivada de $y_{i}$, $i = 1, 2, 3$, em relação a qualquer uma das variáveis $x_{1}$, $x_{2}$, $x_{3}$ é uma constante. Por exemplo, a derivada de $y_{2}$ em relação a $x_{3}$ é igual a $1$."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###Coisas para importar"
+    "Este conjunto de equações pode ser reescrito em notação matricial, da seguinte forma:"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\mathbf{A}\\, \\mathbf{x} = \\mathbf{y} \\: ,$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "em que"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\mathbf{A} = \\left[\n",
+    "\\begin{array}{ccc}\n",
+    "1 & 5 & -5.3 \\\\\n",
+    "2.4 & -2 & 1 \\\\\n",
+    "7.8 & -4.1 & 6.4\n",
+    "\\end{array}\n",
+    "\\right]_{3 \\times 3} \\: ,$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\mathbf{y} = \\left[\n",
+    "\\begin{array}{c}\n",
+    "y_{1} \\\\\n",
+    "y_{2} \\\\\n",
+    "y_{3}\n",
+    "\\end{array}\n",
+    "\\right]_{3 \\times 1}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "e"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\mathbf{x} = \\left[\n",
+    "\\begin{array}{c}\n",
+    "x_{1} \\\\\n",
+    "x_{2} \\\\\n",
+    "x_{3}\n",
+    "\\end{array}\n",
+    "\\right]_{3 \\times 1} \\: .$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Esta equação é comumente denominada sistema de equações lineares ou apenas **sistema linear**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tal como visto anteriormente, o produto $\\mathbf{A} \\, \\mathbf{x}$ pode ser reescrito como uma combinação linear das colunas de $\\mathbf{A}$. Dessa forma, é possível reescrever o sistema linear acima da seguinte forma:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\begin{split}\n",
+    "\\mathbf{y} & =\n",
+    "x_{1} \\left[\n",
+    "\\begin{array}{c}\n",
+    "1 \\\\\n",
+    "2.4 \\\\\n",
+    "7.8\n",
+    "\\end{array} \\right]_{3 \\times 1} +\n",
+    "x_{2} \\left[\n",
+    "\\begin{array}{c}\n",
+    "5 \\\\\n",
+    "-2 \\\\\n",
+    "-4.1\n",
+    "\\end{array} \\right]_{3 \\times 1} +\n",
+    "x_{3} \\left[\n",
+    "\\begin{array}{c}\n",
+    "-5.3 \\\\\n",
+    "1 \\\\\n",
+    "6.4\n",
+    "\\end{array} \\right]_{3 \\times 1} \\\\\\\\\n",
+    "& = x_{1} \\, \\mathbf{A}(:,1) + x_{2} \\, \\mathbf{A}(:,2) + x_{3} \\, \\mathbf{A}(:,3) \\: ,\n",
+    "\\end{split}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "em que $\\mathbf{A}(:,j)$, $j = 1, 2, 3$, é um vetor $3 \\times 1$ que representa a $j$-ésima coluna de $\\mathbf{A}$. Esta formulação evidencia o fato de que o vetor $\\mathbf{y}$ é uma [combinação linear](http://mathworld.wolfram.com/LinearCombination.html) das colunas da matriz $\\mathbf{A}$, cujos coeficientes são os elementos do vetor $\\mathbf{x}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Esta formulação nos permite analisar a unicidade do sistema linear apresentado acima. A unicidade de um sistema linear está relacionada à seguinte questão: Seja uma matriz $\\mathbf{A}$ e um determinado vetor $\\mathbf{y} = \\mathbf{y}^{\\dagger}$. Existem diferentes vetores $\\mathbf{x}$ cujo produto $\\mathbf{A} \\mathbf{x}$ produz o mesmo vetor $\\mathbf{y}^{\\dagger}$? Ou seja, existem diferentes vetores $\\mathbf{x}$ que satisfazem a equação"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\mathbf{A}\\, \\mathbf{x} = \\mathbf{y}^{\\dagger}$ ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Por definição, se existir apenas um determinado vetor $\\mathbf{x} = \\mathbf{x}^{\\dagger}$ que satisfaz a equação acima, então diz-se que o sistema linear é **único**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
-    "import numpy as np"
+    "Para analisar se um sistema linear é único, considere o caso particular em que o vetor $\\mathbf{y}^{\\dagger}$ possui todos o elementos iguais a zero, ou seja:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###Minha função (Opção 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "def minha_funcao():\n",
-    "    \n",
-    "    '''\n",
-    "    Descrição breve da função\n",
-    "    \n",
-    "    \n",
-    "    input\n",
-    "    \n",
-    "    parâmetro de entrada 1: tipo de variável - descrição da variável\n",
-    "    parâmetro de entrada 2: tipo de variável - descrição da variável\n",
-    "    ...\n",
-    "    \n",
-    "    output\n",
-    "    \n",
-    "    parâmetro de saída 1: tipo de variável - descrição da variável\n",
-    "    parâmetro de saída 2: tipo de variável - descrição da variável\n",
-    "    ...\n",
-    "    \n",
-    "    '''\n",
-    "    \n",
-    "    #inicialização de variáveis\n",
-    "    \n",
-    "    #mensagens de erro\n",
-    "    #if ... :\n",
-    "    #    raise ValueError('mensagem de erro')\n",
-    "    #if ... :\n",
-    "    #    raise ValueError('mensagem de erro')\n",
-    "    #...\n",
-    "\n",
-    "    #implementação da função\n",
-    "    \n",
-    "    #return saída1, saída2, ..."
+    "$\\mathbf{0} = \\mathbf{A} \\mathbf{x}$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###Importar minhas funções de um arquivo externo (Opção 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import minhas_funcoes as mfun"
+    "ou"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###Input"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#Gerar o(s) input(s) da sua função."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "###Resultado da minha função"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#Exemplo de mensagem de erro emitida pela sua função (opcional)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#Resultado gerado com a função mostrada no próprio IPython Notebook (Opção 1)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#Resultado gerado com a função definida no arquivo externo 'minhas_funcoes.py' (Opção 2)."
+    "$\\left[\n",
+    "\\begin{array}{c}\n",
+    "0 \\\\\n",
+    "0 \\\\\n",
+    "0\n",
+    "\\end{array} \\right]_{3 \\times 1} =\n",
+    "x_{1} \\left[\n",
+    "\\begin{array}{c}\n",
+    "1 \\\\\n",
+    "2.4 \\\\\n",
+    "7.8\n",
+    "\\end{array} \\right]_{3 \\times 1} +\n",
+    "x_{2} \\left[\n",
+    "\\begin{array}{c}\n",
+    "5 \\\\\n",
+    "-2 \\\\\n",
+    "-4.1\n",
+    "\\end{array} \\right]_{3 \\times 1} +\n",
+    "x_{3} \\left[\n",
+    "\\begin{array}{c}\n",
+    "-5.3 \\\\\n",
+    "1 \\\\\n",
+    "6.4\n",
+    "\\end{array} \\right]_{3 \\times 1} \\: . $"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###Resultado proveniente de outra implementação"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#Resultado proveniente de uma implementação independente, que pode ser feita em Python, por exemplo."
+    "Por definição, se o único vetor $\\mathbf{x}$ que satisfaz esta equação é aquele que possui todos os elementos iguais a zero, então o sistema linear é único. Nesse caso, diz-se que as colunas da matriz $\\mathbf{A}$ formam uma [base](http://mathworld.wolfram.com/VectorSpaceBasis.html), o que corresponde a dizer que as colunas de $\\mathbf{A}$ são vetores [linearmente independentes](http://mathworld.wolfram.com/LinearlyIndependent.html) e que $\\mathbf{A}$ tem posto (ou *rank*) completo."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###Teste de validação"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.allclose(meu_resultado, python_resultado, rtol=1e-10, atol=1e-10)"
+    "Dar exemplos de sistemas lineares únicos e não-unicos"
    ]
   },
   {
