detalhamento dos algoritmos para calcular o produto entre matrizes

--- a/Topicos/Algelin/produto-matriz-matriz.ipynb
+++ b/Topicos/Algelin/produto-matriz-matriz.ipynb
@@ -26,14 +26,14 @@
     "        \\vdots &        & \\vdots \\\\\n",
     "        a_{N1} & \\cdots & a_{NM}\n",
     "    \\end{array}\n",
-    "    \\right]_{N \\times M} \\\\\n",
+    "    \\right]_{N \\times M} \\\\\\\\\n",
     "    & = \\left[\n",
     "    \\begin{array}{c}\n",
     "        \\mathbf{A}(1,:) \\\\\n",
     "        \\vdots \\\\\n",
     "        \\mathbf{A}(N,:)\n",
     "    \\end{array}\n",
-    "    \\right]_{N \\times M} \\\\\n",
+    "    \\right]_{N \\times M} \\\\\\\\\n",
     "    & = \\left[\n",
     "    \\begin{array}{ccc}\n",
     "        \\mathbf{A}(:,1) &\n",
@@ -59,25 +59,25 @@
     "    \\mathbf{B} \n",
     "    & = \\left[\n",
     "    \\begin{array}{ccc}\n",
-    "        b_{11} & \\cdots & b_{1M} \\\\\n",
+    "        b_{11} & \\cdots & b_{1L} \\\\\n",
     "        \\vdots &        & \\vdots \\\\\n",
-    "        b_{N1} & \\cdots & b_{NM}\n",
+    "        b_{M1} & \\cdots & b_{ML}\n",
     "    \\end{array}\n",
-    "    \\right]_{N \\times M} \\\\\n",
+    "    \\right]_{M \\times L} \\\\\\\\\n",
     "    & = \\left[\n",
     "    \\begin{array}{c}\n",
     "        \\mathbf{B}(1,:) \\\\\n",
     "        \\vdots \\\\\n",
-    "        \\mathbf{B}(N,:)\n",
+    "        \\mathbf{B}(M,:)\n",
     "    \\end{array}\n",
-    "    \\right]_{N \\times M} \\\\\n",
+    "    \\right]_{M \\times L} \\\\\\\\\n",
     "    & = \\left[\n",
     "    \\begin{array}{ccc}\n",
     "        \\mathbf{B}(:,1) &\n",
     "        \\cdots &\n",
-    "        \\mathbf{B}(:,M)\n",
+    "        \\mathbf{B}(:,L)\n",
     "    \\end{array}\n",
-    "    \\right]_{N \\times M} \\: , \\\\\n",
+    "    \\right]_{M \\times L} \\: , \\\\\n",
     "\\end{split}$$"
    ]
   },
@@ -89,13 +89,47 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "Seja $\\mathbf{C}$ a matriz $N \\times L$ resultante do produto entre as matrizes $\\mathbf{A}$ e $\\mathbf{B}$. A expressão que descreve os elementos de $\\mathbf{C}$ é dada por:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\begin{split}\n",
+    "\\mathbf{C} \n",
+    "    & = \\left[\n",
+    "    \\begin{array}{ccc}\n",
+    "        c_{11} & \\cdots & c_{1L} \\\\\n",
+    "        \\vdots &        & \\vdots \\\\\n",
+    "        c_{N1} & \\cdots & c_{NL}\n",
+    "    \\end{array}\n",
+    "    \\right]_{N \\times L} \\\\\\\\\n",
+    "    & = \\left[\n",
+    "    \\begin{array}{cccc}\n",
+    "        \\left( a_{11} \\, b_{11} + \\cdots + a_{1M} \\, b_{M1} \\right) &\n",
+    "        \\left( a_{11} \\, b_{12} + \\cdots + a_{1M} \\, b_{M2} \\right) &\n",
+    "        \\cdots &\n",
+    "        \\left( a_{11} \\, b_{1L} + \\cdots + a_{1M} \\, b_{ML} \\right) \\\\\n",
+    "        \\left( a_{21} \\, b_{11} + \\cdots + a_{2M} \\, b_{M1} \\right) &\n",
+    "        \\left( a_{21} \\, b_{12} + \\cdots + a_{2M} \\, b_{M2} \\right) &\n",
+    "        \\cdots &\n",
+    "        \\left( a_{21} \\, b_{1L} + \\cdots + a_{2M} \\, b_{ML} \\right) \\\\\n",
+    "        \\vdots & \\vdots & & \\vdots \\\\\n",
+    "        \\left( a_{N1} \\, b_{11} + \\cdots + a_{NM} \\, b_{M1} \\right) &\n",
+    "        \\left( a_{N1} \\, b_{12} + \\cdots + a_{NM} \\, b_{M2} \\right) &\n",
+    "        \\cdots &\n",
+    "        \\left( a_{N1} \\, b_{1L} + \\cdots + a_{NM} \\, b_{ML} \\right)\n",
+    "    \\end{array}\n",
+    "    \\right]_{N \\times L} \\: .    \n",
+    "\\end{split}\n",
+    "$$"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -108,7 +142,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A maneira mais simples de escrever o produto $\\mathbf{C} = \\mathbf{A} \\mathbf{B}$ é dada por:"
+    "O algoritmo mais simples para calcular o produto $\\mathbf{C} = \\mathbf{A} \\mathbf{B}$ é dado por:"
    ]
   },
   {
@@ -143,13 +177,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "Compare este algoritmo com a expressão que descreve os elementos de $\\mathbf{C}$."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -162,7 +196,65 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Esta formulação consiste em representar cada elemento $\\mathbf{C}(i,j)$, $i = 1, ..., N$, $j = 1, ..., L$, pelo produto escalar entre $\\mathbf{A}(i,:)$ e $\\mathbf{B}(:,j)$. Este produto escalar é representado pelo loop $k$."
+    "A expressão que descreve os elementos de $\\mathbf{C}$ pode ser reescrita da seguinte forma:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\begin{split}\n",
+    "\\mathbf{C} \n",
+    "    & = \\left[\n",
+    "    \\begin{array}{ccc}\n",
+    "        c_{11} & \\cdots & c_{1L} \\\\\n",
+    "        \\vdots &        & \\vdots \\\\\n",
+    "        c_{N1} & \\cdots & c_{NL}\n",
+    "    \\end{array}\n",
+    "    \\right]_{N \\times L} \\\\\\\\\n",
+    "    & = \\left[\n",
+    "    \\begin{array}{cccc}\n",
+    "        \\left( a_{11} \\, b_{11} + \\cdots + a_{1M} \\, b_{M1} \\right) &\n",
+    "        \\left( a_{11} \\, b_{12} + \\cdots + a_{1M} \\, b_{M2} \\right) &\n",
+    "        \\cdots &\n",
+    "        \\left( a_{11} \\, b_{1L} + \\cdots + a_{1M} \\, b_{ML} \\right) \\\\\n",
+    "        \\left( a_{21} \\, b_{11} + \\cdots + a_{2M} \\, b_{M1} \\right) &\n",
+    "        \\left( a_{21} \\, b_{12} + \\cdots + a_{2M} \\, b_{M2} \\right) &\n",
+    "        \\cdots &\n",
+    "        \\left( a_{21} \\, b_{1L} + \\cdots + a_{2M} \\, b_{ML} \\right) \\\\\n",
+    "        \\vdots & \\vdots & & \\vdots \\\\\n",
+    "        \\left( a_{N1} \\, b_{11} + \\cdots + a_{NM} \\, b_{M1} \\right) &\n",
+    "        \\left( a_{N1} \\, b_{12} + \\cdots + a_{NM} \\, b_{M2} \\right) &\n",
+    "        \\cdots &\n",
+    "        \\left( a_{N1} \\, b_{1L} + \\cdots + a_{NM} \\, b_{ML} \\right)\n",
+    "    \\end{array}\n",
+    "    \\right]_{N \\times L} \\\\\\\\\n",
+    "    & = \\left[\n",
+    "    \\begin{array}{cccc}\n",
+    "        \\mathbf{A}(1,:) \\mathbf{B}(:,1) &\n",
+    "        \\mathbf{A}(1,:) \\mathbf{B}(:,2) &\n",
+    "        \\cdots &\n",
+    "        \\mathbf{A}(1,:) \\mathbf{B}(:,L) \\\\\n",
+    "        \\mathbf{A}(2,:) \\mathbf{B}(:,1) &\n",
+    "        \\mathbf{A}(2,:) \\mathbf{B}(:,2) &\n",
+    "        \\cdots &\n",
+    "        \\mathbf{A}(2,:) \\mathbf{B}(:,L) \\\\        \n",
+    "        \\vdots & \\vdots & & \\vdots \\\\\n",
+    "        \\mathbf{A}(N,:) \\mathbf{B}(:,1) &\n",
+    "        \\mathbf{A}(N,:) \\mathbf{B}(:,2) &\n",
+    "        \\cdots &\n",
+    "        \\mathbf{A}(N,:) \\mathbf{B}(:,L) \\\\\n",
+    "    \\end{array}\n",
+    "    \\right]_{N \\times L} \\: ,\n",
+    "\\end{split}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "em que $\\mathbf{A}(i,:) \\, \\mathbf{B}(:,j)$ indica o produto escalar entre o vetor $\\mathbf{A}(i,:)$, que é $1 \\times M$, e o vetor $\\mathbf{B}(:,j)$, que é $M \\times 1$. Esta formulação consiste em representar cada elemento $c_{ij}$, $i = 1, ..., N$, $j = 1, ..., L$, como o produto escalar entre $\\mathbf{A}(i,:)$ e $\\mathbf{B}(:,j)$. Sendo assim, o algoritmo para calcular o produto $\\mathbf{C} = \\mathbf{A} \\mathbf{B}$ pode ser reescrito da seguinte forma:"
    ]
   },
   {
@@ -187,14 +279,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**ATENÇÃO:** $\\mathbf{A}(i,:) \\, \\mathbf{B}(:,j)$ indica o produto escalar entre o vetor $\\mathbf{A}(i,:)$, que é $1 \\times M$, e o vetor $\\mathbf{B}(:,j)$, que é $M \\times 1$. Portanto, $c_{ij}$ é um escalar."
+    "Note que o loop $j$ percorre os elementos da $i$-ésima linha da matriz $\\mathbf{C}$. Isso permite reescrever a expressão que descreve o elementos de $\\mathbf{C}$ da seguinte forma:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note que o loop $j$ percorre os elementos da $i$-ésima linha da matriz $\\mathbf{C}$. Se particionarmos a matriz $\\mathbf{C}$ em linhas, é possível suprimir o loop $j$:"
+    "$$\\begin{split}\n",
+    "\\mathbf{C} \n",
+    "    & = \\left[\n",
+    "    \\begin{array}{cccc}\n",
+    "        \\mathbf{A}(1,:) \\mathbf{B}(:,1) &\n",
+    "        \\mathbf{A}(1,:) \\mathbf{B}(:,2) &\n",
+    "        \\cdots &\n",
+    "        \\mathbf{A}(1,:) \\mathbf{B}(:,L) \\\\\n",
+    "        \\mathbf{A}(2,:) \\mathbf{B}(:,1) &\n",
+    "        \\mathbf{A}(2,:) \\mathbf{B}(:,2) &\n",
+    "        \\cdots &\n",
+    "        \\mathbf{A}(2,:) \\mathbf{B}(:,L) \\\\        \n",
+    "        \\vdots & \\vdots & & \\vdots \\\\\n",
+    "        \\mathbf{A}(N,:) \\mathbf{B}(:,1) &\n",
+    "        \\mathbf{A}(N,:) \\mathbf{B}(:,2) &\n",
+    "        \\cdots &\n",
+    "        \\mathbf{A}(N,:) \\mathbf{B}(:,L) \\\\\n",
+    "    \\end{array}\n",
+    "    \\right]_{N \\times L} \\\\\\\\\n",
+    "    & = \\left[\n",
+    "    \\begin{array}{c}\n",
+    "        \\mathbf{A}(1,:)\n",
+    "        \\left[ \\begin{array}{cccc}\n",
+    "        \\mathbf{B}(:,1) \\: \\mathbf{B}(:,2) \\: \\cdots \\: \\mathbf{B}(:,L)\n",
+    "        \\end{array} \\right] \\\\\n",
+    "        \\vdots \\\\\n",
+    "        \\mathbf{A}(N,:)\n",
+    "        \\left[ \\begin{array}{cccc}\n",
+    "        \\mathbf{B}(:,1) \\: \\mathbf{B}(:,2) \\: \\cdots \\: \\mathbf{B}(:,L)\n",
+    "        \\end{array} \\right]\n",
+    "    \\end{array}\n",
+    "    \\right]_{N \\times L} \\\\\\\\\n",
+    "    & = \\left[\n",
+    "    \\begin{array}{c}\n",
+    "        \\mathbf{A}(1,:) \\mathbf{B} \\\\\n",
+    "        \\vdots \\\\\n",
+    "        \\mathbf{A}(N,:) \\mathbf{B}\n",
+    "    \\end{array}\n",
+    "    \\right]_{N \\times L} \\: .\n",
+    "\\end{split}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note que esta expressão descreve cada linha $\\mathbf{C}(i,:)$, $i = 1, ..., N$, de $\\mathbf{C}$ como o produto entre $\\mathbf{A}(i,:)$, $i = 1, ..., N$, que é a $i$-ésima linha de $\\mathbf{A}$, e a matriz $\\mathbf{B}$. Esta expressão permite reescrever o algoritmo para o cálculo de $\\mathbf{C}$ da seguinte forma:"
    ]
   },
   {
@@ -269,7 +408,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note que o loop $i$ representa a multiplicação da coluna $\\mathbf{A}(:,k)$ pelo elemento $\\mathbf{B}(k,j)$. Este loop pode ser suprimido da seguinte forma:"
+    "Note que o loop $i$ representa a multiplicação da coluna $\\mathbf{A}(:,k)$ pelo elemento $b_{kj}$. Este loop pode ser suprimido da seguinte forma:"
    ]
   },
   {
@@ -283,7 +422,7 @@
     "\n",
     ">for $k = 1:M$\n",
     "\n",
-    ">>$\\mathbf{C}(:,j) = \\mathbf{C}(:,j) + \\mathbf{A}(:,k) \\, \\mathbf{B}(k,j)$\n",
+    ">>$\\mathbf{C}(:,j) = \\mathbf{C}(:,j) + \\mathbf{A}(:,k) \\, b_{kj}$\n",
     "\n",
     ">end\n",
     "\n",
@@ -296,7 +435,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**ATENÇÃO:** $\\mathbf{A}(:,k) \\, \\mathbf{B}(k,j)$ indica o produto entre o vetor $\\mathbf{A}(:,k)$, que é $N \\times 1$, pelo elemento $\\mathbf{B}(k,j)$, que é um escalar. Portanto, $\\mathbf{C}(:,j)$ é um vetor $N \\times 1$."
+    "**ATENÇÃO:** $\\mathbf{A}(:,k) \\, b_{kj}$ indica o produto entre o vetor $\\mathbf{A}(:,k)$, que é $N \\times 1$, pelo elemento $b_{kj}$, que é um escalar. Portanto, $\\mathbf{C}(:,j)$ é um vetor $N \\times 1$."
    ]
   },
   {
@@ -378,7 +517,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note que, tal como mostrado na \"Formulação baseada na combinação linear de colunas\", o loop $i$ representa a multiplicação da coluna $\\mathbf{A}(:,k)$ pelo elemento $\\mathbf{B}(k,j)$ e, portanto, o loop $i$ pode ser suprimido da seguinte forma:"
+    "Note que, tal como mostrado na \"Formulação baseada na combinação linear de colunas\", o loop $i$ representa a multiplicação da coluna $\\mathbf{A}(:,k)$ pelo elemento $b_{kj}$ e, portanto, o loop $i$ pode ser suprimido da seguinte forma:"
    ]
   },
   {
@@ -392,7 +531,7 @@
     "\n",
     ">for $j = 1:L$\n",
     "\n",
-    ">>$\\mathbf{C}(:,j) = \\mathbf{C}(:,j) + \\mathbf{A}(:,k) \\, \\mathbf{B}(k,j)$\n",
+    ">>$\\mathbf{C}(:,j) = \\mathbf{C}(:,j) + \\mathbf{A}(:,k) \\, b_{kj}$\n",
     "\n",
     ">end\n",
     "\n",
@@ -405,7 +544,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**ATENÇÃO:** $\\mathbf{A}(:,k) \\, \\mathbf{B}(k,j)$ indica o produto entre o vetor $\\mathbf{A}(:,k)$, que é $N \\times 1$, pelo elemento $\\mathbf{B}(k,j)$, que é um escalar. Portanto, $\\mathbf{C}(:,j)$ é um vetor $N \\times 1$."
+    "**ATENÇÃO:** $\\mathbf{A}(:,k) \\, b_{kj}$ indica o produto entre o vetor $\\mathbf{A}(:,k)$, que é $N \\times 1$, pelo elemento $b_{kj}$, que é um escalar. Portanto, $\\mathbf{C}(:,j)$ é um vetor $N \\times 1$."
    ]
   },
   {
