edicao da aula produto matriz matriz

--- a/Topicos/Algelin/produto-matriz-matriz.ipynb
+++ b/Topicos/Algelin/produto-matriz-matriz.ipynb
@@ -377,7 +377,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Esta formulação consiste em representar cada coluna $\\mathbf{C}(:,j)$, $j = 1, ..., L$, pela combinação linear das colunas de $\\mathbf{A}$. Para tanto, vamos rearranjar a ordem dos loops $i$, $j$ e $k$ da \"Formulação baseada no encadeamento de três laços\", tal como mostrado abaixo:"
+    "A expressão que descreve os elementos de $\\mathbf{C}$ também pode ser reescrita da seguinte forma:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\begin{split}\n",
+    "\\mathbf{C} \n",
+    "    & = \\left[\n",
+    "    \\begin{array}{cccc}\n",
+    "        \\mathbf{A}(1,:) \\mathbf{B}(:,1) &\n",
+    "        \\mathbf{A}(1,:) \\mathbf{B}(:,2) &\n",
+    "        \\cdots &\n",
+    "        \\mathbf{A}(1,:) \\mathbf{B}(:,L) \\\\\n",
+    "        \\mathbf{A}(2,:) \\mathbf{B}(:,1) &\n",
+    "        \\mathbf{A}(2,:) \\mathbf{B}(:,2) &\n",
+    "        \\cdots &\n",
+    "        \\mathbf{A}(2,:) \\mathbf{B}(:,L) \\\\        \n",
+    "        \\vdots & \\vdots & & \\vdots \\\\\n",
+    "        \\mathbf{A}(N,:) \\mathbf{B}(:,1) &\n",
+    "        \\mathbf{A}(N,:) \\mathbf{B}(:,2) &\n",
+    "        \\cdots &\n",
+    "        \\mathbf{A}(N,:) \\mathbf{B}(:,L) \\\\\n",
+    "    \\end{array}\n",
+    "    \\right]_{N \\times L} \\\\\\\\\n",
+    "    & = \\left[\n",
+    "    \\begin{array}{cccc}\n",
+    "        \\left[ \\begin{array}{c}\n",
+    "        \\mathbf{A}(1,:) \\\\ \\mathbf{A}(2,:) \\\\ \\vdots \\\\ \\mathbf{A}(M,:)\n",
+    "        \\end{array} \\right] \\, \\mathbf{B}(:,1) &\n",
+    "        \\left[ \\begin{array}{c}\n",
+    "        \\mathbf{A}(1,:) \\\\ \\mathbf{A}(2,:) \\\\ \\vdots \\\\ \\mathbf{A}(M,:)\n",
+    "        \\end{array} \\right] \\, \\mathbf{B}(:,2) &\n",
+    "        \\cdots &\n",
+    "        \\left[ \\begin{array}{c}\n",
+    "        \\mathbf{A}(1,:) \\\\ \\mathbf{A}(2,:) \\\\ \\vdots \\\\ \\mathbf{A}(M,:)\n",
+    "        \\end{array} \\right] \\, \\mathbf{B}(:,L) &\n",
+    "        \\end{array}\n",
+    "    \\right]_{N \\times L} \\\\\\\\\n",
+    "    & = \\left[\n",
+    "    \\begin{array}{cccc}\n",
+    "        \\mathbf{A} \\, \\mathbf{B}(:,1) &\n",
+    "        \\mathbf{A} \\, \\mathbf{B}(:,2) &\n",
+    "        \\cdots &\n",
+    "        \\mathbf{A} \\, \\mathbf{B}(:,L)\n",
+    "    \\end{array}\n",
+    "    \\right]_{N \\times L} \\: .\n",
+    "\\end{split}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Esta formulação consiste em representar cada coluna $\\mathbf{C}(:,j)$, $j = 1, ..., L$, pela combinação linear das colunas de $\\mathbf{A}$, isto é, a $j$-ésima coluna de $\\mathbf{C}$, $j = 1, ..., L$, é o produto entre a matriz $\\mathbf{A}$ e a $j$-ésima, $j = 1, ..., L$, coluna de $\\mathbf{B}$. Isso permite rearranjar a ordem dos loops $i$, $j$ e $k$ da \"Formulação baseada no encadeamento de três laços\", tal como mostrado abaixo:"
    ]
   },
   {
