--- a/Topicos/Algelin/produto-matriz-matriz.ipynb
+++ b/Topicos/Algelin/produto-matriz-matriz.ipynb
@@ -132,6 +132,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -173,7 +182,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note que o loop $i$ percorre as linhas de $\\mathbf{A}$, o loop $j$ percorre as colunas de $\\mathbf{B}$ e o loop $k$ está relacionado ao produto escalar entre $\\mathbf{A}(i,:)$ e $\\mathbf{B}(:,j)$. Há outras três maneiras distintas de escrever o produto $\\mathbf{C} = \\mathbf{A} \\mathbf{B}$."
+    "Note que o loop $i$ percorre as linhas de $\\mathbf{A}$, o loop $j$ percorre as colunas de $\\mathbf{B}$ e o loop $k$ percorre os elementos ao longo da $i$-ésima linha de $\\mathbf{A}$ e os elementos ao longo da $j$-ésima coluna de $\\mathbf{B}$."
    ]
   },
   {
@@ -184,6 +193,15 @@
    "source": [
     "Compare este algoritmo com a expressão que descreve os elementos de $\\mathbf{C}$."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -377,7 +395,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A expressão que descreve os elementos de $\\mathbf{C}$ também pode ser reescrita da seguinte forma:"
+    "A expressão que descreve os elementos de $\\mathbf{C}$ também pode ser escrita da seguinte forma:"
    ]
   },
   {
@@ -498,7 +516,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Por fim, note que o loop $k$ representa o produto entre $\\mathbf{A}$ e as colunas $\\mathbf{B}(:,j)$, tal que:"
+    "Por fim, note que o loop $k$ representa o produto entre $\\mathbf{A}$ e as colunas $\\mathbf{B}(:,j)$. Portanto, este loop pode ser suprimido da seguinte forma:"
    ]
   },
   {
@@ -542,7 +560,142 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Esta formaulação consiste em representar a matriz $\\mathbf{C}$ como uma soma de matrizes definidas pelo produto direto entre as colunas $\\mathbf{A}(:,k)$ e as linhas $\\mathbf{B}(k,:)$, $k = 1, ..., M$. Para tanto, vamos rearranjar a ordem dos loops $i$, $j$ e $k$ da \"Formulação baseada no encadeamento de três laços\", tal como mostrado abaixo:"
+    "Esta formulação consiste em representar a matriz $\\mathbf{C}$ como uma soma de matrizes definidas pelo produto direto entre as colunas $\\mathbf{A}(:,k)$ e as linhas $\\mathbf{B}(k,:)$, $k = 1, ..., M$. Para verificarmos esta soma de matrizes, basta manipular a expressão que determina os elementos de $\\mathbf{C}$: "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\begin{split}\n",
+    "\\mathbf{C} \n",
+    "    & = \\left[\n",
+    "    \\begin{array}{ccc}\n",
+    "        c_{11} & \\cdots & c_{1L} \\\\\n",
+    "        \\vdots &        & \\vdots \\\\\n",
+    "        c_{N1} & \\cdots & c_{NL}\n",
+    "    \\end{array}\n",
+    "    \\right]_{N \\times L} \\\\\\\\\n",
+    "    & = \\left[\n",
+    "    \\begin{array}{cccc}\n",
+    "        \\left( a_{11} \\, b_{11} + \\cdots + a_{1M} \\, b_{M1} \\right) &\n",
+    "        \\left( a_{11} \\, b_{12} + \\cdots + a_{1M} \\, b_{M2} \\right) &\n",
+    "        \\cdots &\n",
+    "        \\left( a_{11} \\, b_{1L} + \\cdots + a_{1M} \\, b_{ML} \\right) \\\\\n",
+    "        \\left( a_{21} \\, b_{11} + \\cdots + a_{2M} \\, b_{M1} \\right) &\n",
+    "        \\left( a_{21} \\, b_{12} + \\cdots + a_{2M} \\, b_{M2} \\right) &\n",
+    "        \\cdots &\n",
+    "        \\left( a_{21} \\, b_{1L} + \\cdots + a_{2M} \\, b_{ML} \\right) \\\\\n",
+    "        \\vdots & \\vdots & & \\vdots \\\\\n",
+    "        \\left( a_{N1} \\, b_{11} + \\cdots + a_{NM} \\, b_{M1} \\right) &\n",
+    "        \\left( a_{N1} \\, b_{12} + \\cdots + a_{NM} \\, b_{M2} \\right) &\n",
+    "        \\cdots &\n",
+    "        \\left( a_{N1} \\, b_{1L} + \\cdots + a_{NM} \\, b_{ML} \\right)\n",
+    "    \\end{array}\n",
+    "    \\right]_{N \\times L} \\\\\\\\\n",
+    "    & = \\left[\n",
+    "    \\begin{array}{cccc}\n",
+    "        a_{11} \\, b_{11} & a_{11} \\, b_{12} & \\cdots & a_{11} \\, b_{1L} \\\\\n",
+    "        a_{21} \\, b_{11} & a_{21} \\, b_{12} & \\cdots & a_{21} \\, b_{1L} \\\\\n",
+    "        \\vdots & \\vdots & & \\vdots \\\\\n",
+    "        a_{N1} \\, b_{11} & a_{N1} \\, b_{12} & \\cdots & a_{N1} \\, b_{1L}\n",
+    "    \\end{array}\n",
+    "    \\right]_{N \\times L} + \\cdots +\n",
+    "    \\left[\n",
+    "    \\begin{array}{cccc}\n",
+    "        a_{1M} \\, b_{M1} & a_{1M} \\, b_{M2} & \\cdots & a_{1M} \\, b_{ML} \\\\\n",
+    "        a_{2M} \\, b_{M1} & a_{2M} \\, b_{M2} & \\cdots & a_{2M} \\, b_{ML} \\\\\n",
+    "        \\vdots & \\vdots & & \\vdots \\\\\n",
+    "        a_{NM} \\, b_{M1} & a_{NM} \\, b_{M2} & \\cdots & a_{NM} \\, b_{ML}\n",
+    "    \\end{array}\n",
+    "    \\right]_{N \\times L}\n",
+    "\\end{split}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Observe que cada uma dessas matrizes é o produto direto entre uma coluna de $\\mathbf{A}$ e uma linha de $\\mathbf{B}$:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\begin{split}\n",
+    "\\mathbf{C} \n",
+    "   & = \\left[\n",
+    "    \\begin{array}{cccc}\n",
+    "        a_{11} \\, b_{11} & a_{11} \\, b_{12} & \\cdots & a_{11} \\, b_{1L} \\\\\n",
+    "        a_{21} \\, b_{11} & a_{21} \\, b_{12} & \\cdots & a_{21} \\, b_{1L} \\\\\n",
+    "        \\vdots & \\vdots & & \\vdots \\\\\n",
+    "        a_{N1} \\, b_{11} & a_{N1} \\, b_{12} & \\cdots & a_{N1} \\, b_{1L}\n",
+    "    \\end{array}\n",
+    "    \\right]_{N \\times L} + \\cdots +\n",
+    "    \\left[\n",
+    "    \\begin{array}{cccc}\n",
+    "        a_{1M} \\, b_{M1} & a_{1M} \\, b_{M2} & \\cdots & a_{1M} \\, b_{ML} \\\\\n",
+    "        a_{2M} \\, b_{M1} & a_{2M} \\, b_{M2} & \\cdots & a_{2M} \\, b_{ML} \\\\\n",
+    "        \\vdots & \\vdots & & \\vdots \\\\\n",
+    "        a_{NM} \\, b_{M1} & a_{NM} \\, b_{M2} & \\cdots & a_{NM} \\, b_{ML}\n",
+    "    \\end{array}\n",
+    "    \\right]_{N \\times L} \\\\\\\\\n",
+    "   & = \\left[\n",
+    "    \\begin{array}{c}\n",
+    "        a_{11} \\, \n",
+    "        \\left[ \\begin{array}{cccc}\n",
+    "        b_{11} \\, b_{12} & \\cdots & \\, b_{1L} \n",
+    "        \\end{array} \\right]\\\\\n",
+    "        a_{21} \\, \n",
+    "        \\left[ \\begin{array}{cccc}\n",
+    "        b_{11} \\, b_{12} & \\cdots & \\, b_{1L} \n",
+    "        \\end{array} \\right]\\\\\n",
+    "        \\vdots \\\\\n",
+    "        a_{N1} \\, \n",
+    "        \\left[ \\begin{array}{cccc}\n",
+    "        b_{11} \\, b_{12} & \\cdots & \\, b_{1L} \n",
+    "        \\end{array} \\right]\n",
+    "    \\end{array}\n",
+    "    \\right]_{N \\times L} + \\cdots +\n",
+    "    \\left[\n",
+    "    \\begin{array}{c}\n",
+    "        a_{1M} \\, \n",
+    "        \\left[ \\begin{array}{cccc}\n",
+    "        b_{M1} \\, b_{M2} & \\cdots & \\, b_{ML} \n",
+    "        \\end{array} \\right]\\\\\n",
+    "        a_{2M} \\, \n",
+    "        \\left[ \\begin{array}{cccc}\n",
+    "        b_{M1} \\, b_{M2} & \\cdots & \\, b_{ML} \n",
+    "        \\end{array} \\right]\\\\\n",
+    "        \\vdots \\\\\n",
+    "        a_{NM} \\, \n",
+    "        \\left[ \\begin{array}{cccc}\n",
+    "        b_{M1} \\, b_{M2} & \\cdots & \\, b_{ML}\n",
+    "        \\end{array} \\right]\n",
+    "    \\end{array}\n",
+    "    \\right]_{N \\times L}\n",
+    "\\end{split}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "parei aqui!!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para tanto, vamos rearranjar a ordem dos loops $i$, $j$ e $k$ da \"Formulação baseada no encadeamento de três laços\", tal como mostrado abaixo:"
    ]
   },
   {
