detalhamento do produto entre matrizes formulado por meio do produto direto

--- a/Topicos/Algelin/produto-matriz-matriz.ipynb
+++ b/Topicos/Algelin/produto-matriz-matriz.ipynb
@@ -675,27 +675,20 @@
     "        b_{M1} \\, b_{M2} & \\cdots & \\, b_{ML}\n",
     "        \\end{array} \\right]\n",
     "    \\end{array}\n",
-    "    \\right]_{N \\times L}\n",
+    "    \\right]_{N \\times L} \\\\\\\\\n",
+    "    & = \\mathbf{A}(:,1) \\, \\mathbf{B}(1,:) +\n",
+    "        \\mathbf{A}(:,2) \\, \\mathbf{B}(2,:) +\n",
+    "        \\cdots +\n",
+    "        \\mathbf{A}(:,M) \\, \\mathbf{B}(M,:)\n",
     "\\end{split}\n",
     "$$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "parei aqui!!"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para tanto, vamos rearranjar a ordem dos loops $i$, $j$ e $k$ da \"Formulação baseada no encadeamento de três laços\", tal como mostrado abaixo:"
+    "Note que $\\mathbf{A}(:,k) \\, \\mathbf{B}(k,:)$, $k = 1, ..., M$, representa o produto direto entre a $k$-ésima coluna de $\\mathbf{A}$ e a $k$-ésima linha de $\\mathbf{B}$. O cálculo dos elementos de $\\mathbf{C}$ por meio desta expressão é equivalente a rearranjar a ordem dos loops $i$, $j$ e $k$ da \"Formulação baseada no encadeamento de três laços\", tal como mostrado abaixo:"
    ]
   },
   {
